--- a/FrontEnd/assets/style/style.css
+++ b/FrontEnd/assets/style/style.css
@@ -129,12 +129,20 @@ table {
 }
 /** end reset css**/
 body {
+	margin: auto;
+	font-family: "Work Sans";
+	font-size: 14px;
+	background-color: #fffef8;
+}
+
+.all-doc {
 	max-width: 1140px;
 	margin: auto;
 	font-family: "Work Sans";
 	font-size: 14px;
 	background-color: #fffef8;
 }
+
 header {
 	display: flex;
 	justify-content: space-between;
@@ -268,6 +276,44 @@ footer nav ul {
 	display: flex;
 	justify-content: flex-end;
 	margin: 2em;
+}
+
+/* Header admin */
+.admin-header {
+	width: 100%;
+	height: 3.6rem;
+	background-color: #000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	display: none;
+}
+
+.admin-header-content {
+	color: #fff;
+	display: flex;
+	gap: 0.7rem;
+	cursor: pointer;
+}
+
+/* Boutton modifier */
+.portfolio-title {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 1.9rem;
+}
+
+.modal-button {
+	color: #000;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-start;
+	padding-top: 0.6rem;
+	gap: 0.6rem;
+	display: none;
+	cursor: pointer;
 }
 
 /* Filtres */
