--- a/FrontEnd/assets/style/style.css
+++ b/FrontEnd/assets/style/style.css
@@ -464,9 +464,22 @@ footer nav ul {
 	margin-bottom: 0.5rem;
 }
 
-.work-modal img {
+.modal-img {
 	width: 4.8rem;
 	height: 6rem;
+}
+
+.trash-div {
+	position: absolute;
+	right: 0.3rem;
+	top: 0.3rem;
+	background-color: #000;
+	width: 1rem;
+	height: 1rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 0.2rem;
 }
 
 .modal-line {
