--- a/FrontEnd/assets/style/style.css
+++ b/FrontEnd/assets/style/style.css
@@ -469,18 +469,17 @@ footer nav ul {
 	height: 6rem;
 }
 
-.trash-div {
+.trash {
 	position: absolute;
 	right: 0.3rem;
 	top: 0.3rem;
 	background-color: #000;
-	width: 1rem;
-	height: 1rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	border-radius: 0.2rem;
 	cursor: pointer;
+	border: 0.2rem solid black;
 }
 
 .modal-line {
