--- a/FrontEnd/assets/style/style.css
+++ b/FrontEnd/assets/style/style.css
@@ -520,4 +520,99 @@ footer nav ul {
 	line-height: normal;
 	margin: 2.8rem 12.3rem;
 	cursor: pointer;
+	border: none;
+}
+
+/* Modal ajout projet */
+.modal-main {
+	width: 70%;
+	height: 10rem;
+	border-radius: 0.2rem;
+	background: #e8f1f6;
+	margin: 2rem;
+	display: flex;
+	justify-content: center;
+}
+
+.modal-picture {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 40%;
+}
+
+.modal-picture p {
+	color: #444;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 0.625rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin: 0.4rem;
+}
+
+.base-pic {
+	margin: 0.3rem;
+}
+
+.button-add {
+	width: 10rem;
+	height: 2.2rem;
+	border-radius: 3rem;
+	background: #cbd6dc;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#buttonAddPhoto {
+	color: #306685;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 0.875rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+}
+
+.photo-input {
+	display: none;
+}
+
+.modal-form {
+	display: flex;
+	justify-content: flex-start;
+	width: 27rem;
+}
+
+.add-photo-form {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.label-input {
+	color: #3d3d3d;
+	font-family: Work Sans;
+	font-size: 0.875rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
+}
+
+.input-form {
+	margin: 0.3rem 0 2rem 0;
+	width: 27rem;
+	height: 3rem;
+	background: #fff;
+	border: none;
+	box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.09);
+	color: #000;
+	font-family: Work Sans;
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: normal;
 }
